# Rushes

./: .gitattributes  .gitignore  .testcoverage.yml  AGENTS.md  CLAUDE.md  Makefile  PRD.md  README.md  chat_first_editing_agent_prd_v1_2.md  pyproject.toml
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-07-07T06-34-14-411Z.yml  page-2026-07-07T06-34-48-727Z.yml  page-2026-07-07T06-35-04-676Z.yml  page-2026-07-07T06-35-41-719Z.yml  page-2026-07-07T06-39-55-076Z.yml  page-2026-07-07T06-40-21-515Z.yml
apps/api/: CLAUDE.md  __init__.py  deps.py  main.py  schemas.py  turn_stream.py
apps/web/: CLAUDE.md  index.html  openapi.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/worker/: CLAUDE.md  __init__.py  annotation_jobs.py  audio_jobs.py  hash_jobs.py  heartbeat.py  index_jobs.py  job_registry.py  job_runner.py  main.py  media_jobs.py  poster_jobs.py  render_jobs.py
docs/: EXECUTION_PLAN.md  POC_RESULTS.md  architecture.md
e2e/: CLAUDE.md  README.md  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  pnpm-lock.yaml
e2e/fixtures/: app.py  seed_case_a.py  seed_draft.py
e2e/tests/: memory-governance.spec.ts  path3-draft-materials.spec.ts  path3-project-case.spec.ts  resend.spec.ts  rewind.spec.ts  streaming-console.spec.ts  understanding-progress-cancel.spec.ts
go/: .golangci.yml  go.mod  go.sum
go/spikes/: model_integration_test.go  react_spike_test.go  sqlite_concurrency_test.go
research/asr_samples/: paraformer_v2_20260705T072712Z.json
research/tts_samples/: volcano_20260705T075813Z.json
scripts/: check_contracts.py  check_e2e_scaffold_isolation.sh  check_ffmpeg_version.py  check_go_contracts.sh  check_go_coverage.sh  check_no_legacy_backend.sh  dev_all.sh  dev_api.sh  eval_understanding_gradient.py  gen_web_types.sh
scripts/e2e_paths/: CLAUDE.md  README.md  client.py  make_fixtures.py  run_path1.py  run_path2.py  run_scenery.py
scripts/poc/: _common.py  _volc.py  asr_contract.py  e2e_cut.py  make_fixture.py  tts_timestamps.py
tests/: CLAUDE.md  test_contracts_import.py
tests/agent_harness/: test_compaction.py  test_context_builder.py  test_decision_answering.py  test_loop.py  test_loop_asset_digest.py  test_loop_audio_assets.py  test_loop_planner_step.py  test_loop_turn_stream.py  test_m7_postprocess_gate.py  test_m8_memory_scope.py  test_policy_gate.py  test_reducer.py  test_state_validator.py  test_tool_execution_unified.py  test_tool_router.py  test_turn_observations.py  test_turn_queue.py
tests/annotation/: test_image_audio_pipelines.py  test_quality_and_projection.py  test_quality_branches.py  test_video_pipeline_and_worker.py
tests/api/: test_job_observation_bridge.py  test_m0_api.py  test_m1_drafts.py  test_m1_project_case.py  test_m2_materials.py  test_m6_preview_timeline.py  test_render_media_routes.py  test_turn_stream_endpoint.py  test_turn_stream_hub.py
tests/apps/: test_audio_jobs.py  test_render_jobs.py
tests/contracts/: test_events.py  test_prd_examples.py  test_properties.py  test_understanding.py  test_validation.py
tests/domain/: test_case_stage.py  test_decision_effects.py  test_draft_stage.py  test_preconditions.py  test_subtitle_templates.py
tests/events/: test_event_log.py  test_routing.py
tests/golden/: framework.py  test_cases.py
tests/indexing/: test_candidate_pack.py
tests/media/: test_align.py  test_audio_asr_helpers.py  test_bgm_library.py  test_concat_helpers.py  test_font_meta.py  test_hwaccel.py  test_invalidation.py  test_playability.py  test_preview_inspection.py  test_preview_render_ffmpeg.py  test_probe_parsing.py  test_probe_proxy.py  test_process_boundary.py  test_render_cache.py  test_rough_cut.py  test_segment_render.py  test_shots.py  test_subtitles_ass.py  test_thumbnails.py  test_url_import.py  test_waveform.py
tests/providers/: test_aliyun_asr_paraformer.py  test_gateway.py  test_openai_compatible_embedding.py  test_openai_compatible_llm.py  test_planner.py  test_volcengine_tts.py
tests/scripts/: test_check_contracts.py  test_e2e_paths_client.py
tests/storage/: test_data_migrations.py  test_material_summaries.py  test_object_store.py  test_repositories.py  test_schema_and_migrations.py
tests/timeline/: test_anchor_and_patch_apply.py  test_materializer.py  test_summary.py  test_validator.py  test_version_store.py
tests/tools/: test_annotation_tools.py  test_asset_tools.py  test_audio_tools.py  test_content_tools.py  test_media_view_frames.py  test_memory_tools_guards.py  test_project_tools.py  test_registry_and_handlers.py  test_render_tools.py  (+3 more)
(+419 files in other folders)
