[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rushes"
version = "0.1.0"
description = "Chat-first local video editing agent driven by the Rushes PRD."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/agent_harness",
    "packages/contracts",
    "packages/domain",
    "packages/events",
    "packages/storage",
    "packages/tools",
]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/packages/contracts",
    "/packages/domain",
    "/packages/agent_harness",
    "/packages/events",
    "/packages/storage",
    "/packages/tools",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# 项目文档/示例为中文，全角标点是正文而非笔误
allowed-confusables = ["，", "。", "？", "！", "、", "；", "：", "（", "）"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
files = ["packages"]
mypy_path = "packages"
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
asyncio_mode = "auto"
addopts = [
    "--cov=packages",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
