[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rushes"
version = "0.1.0"
description = "Chat-first local video editing agent driven by the Rushes PRD."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "av>=13",
    "fastapi>=0.115",
    "fonttools>=4.50",
    "httpx>=0.27",
    "numpy",
    "opencv-python-headless>=4.10",
    "onnxruntime>=1.18",
    "oss2>=2.18",
    "pydantic>=2.7",
    "scenedetect[opencv]>=0.6",
    "sqlalchemy>=2.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]
poc = [
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/agent_harness",
    "packages/annotation",
    "packages/contracts",
    "packages/domain",
    "packages/events",
    "packages/indexing",
    "packages/media",
    "packages/providers",
    "packages/storage",
    "packages/timeline",
    "packages/tools",
    "apps",
]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/packages/contracts",
    "/packages/domain",
    "/packages/agent_harness",
    "/packages/annotation",
    "/packages/events",
    "/packages/indexing",
    "/packages/media",
    "/packages/providers",
    "/packages/storage",
    "/packages/timeline",
    "/packages/tools",
    "/apps",
    "/scripts",
    "/pyproject.toml",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["packages", "apps", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# 项目文档/示例为中文，全角标点是正文而非笔误
allowed-confusables = ["，", "。", "？", "！", "、", "；", "：", "（", "）"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
files = ["packages", "apps", "scripts/poc", "scripts/e2e_paths"]
mypy_path = "packages"
strict = true
disallow_untyped_defs = true
warn_unused_configs = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["oss2", "oss2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scenedetect", "scenedetect.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["fontTools", "fontTools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
asyncio_mode = "auto"
addopts = [
    "--cov=packages",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
    "-m",
    "not external",
]
markers = [
    "external: tests that call external provider APIs",
    "ffmpeg: tests that require local ffmpeg/ffprobe binaries",
]

[tool.coverage.run]
# CLI 入口只做 argparse+启动接线，无可测逻辑
omit = ["apps/worker/main.py"]
